[gd_scene load_steps=3 format=3 uid="uid://ca4drbyl78ic4"]

[ext_resource type="Script" path="res://sources/ui/main_menu/main_menu.gd" id="1_s3cxe"]
[ext_resource type="Theme" uid="uid://bxjb6x8f4oty5" path="res://sources/ui/theme/ui_theme.tres" id="2_5fdgu"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5fdgu")
script = ExtResource("1_s3cxe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PlayGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Placeholder" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="IPAddressField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/minimum_character_width = 6
text = "127.0.0.1"
placeholder_text = "IP Address"
alignment = 1
max_length = 16
caret_blink = true

[node name="JoinGameButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Join
"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"
